2008-12-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.3

	* configure.in: ENABLE_NLS needs to be at the bottom of config.h

2008-11-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_time/pam_time.c (is_same): Fix check
	of correct string length (debian bug #326407).

2008-10-17  Tomas Mraz <t8m@centrum.cz> 

	* modules/pam_keyinit/pam_keyinit.c (kill_keyrings): Save the old
	euid to suid to be able to restore it.

2008-09-25  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_tally/pam_tally.c(get_tally): Fix syslog message.
	(tally_check): Open faillog read only. Close file descriptor.

2008-08-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.2

2008-08-29  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_loginuid/pam_loginuid.c(set_loginuid): Uids
	are unsigned.

2008-04-22  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_selinux/pam_selinux.c(pam_sm_close_sesion): Fix
	regression from the change from 2008-03-20. setexeccon() must be
	called also with NULL prev_context.

2008-04-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.1

	* configure.in: Bump version number
	* libpam/Makefile.am: Bump version number

2008-04-08  Tomas Mraz <t8m@centrum.cz>

	* libpam/pam_item.c (TRY_SET): Do not set when destination
	is identical to source.
	(pam_set_item): Do not overwrite destination when it
	is identical to source.

2008-04-07  Miloš Komarčević <kmilos@gmail.com>

	* po/sr.po: New file with translation.
	* po/sr@latin.po: Likewise.
	* po/LINGUAS: Add sr and sr@latin.

2008-03-25  Leah Liu <lliu@redhat.com>

	* po/zh_CN.po: Updated translation.

2008-04-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.0.0

	* configure.in: Set version number to 1.0.0.
	* libpam/Makefile.am: Bump patchlevel of libpam.
	* doc/adg/Linux-PAM_ADG.xml: Update version/date.
	* doc/mwg/Linux-PAM_MWG.xml: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Likewise.

2008-03-31  Dan Walsh <dwalsh@redhat.com>
